Upgrade to FEt 5.23.3
- Updated to Qt 5.3.2.
- Added a fet.desktop file (by Alexey Loginov).
- Fixed some comments concerning the GNU GPL license (reported by Alexey
  Loginov).
- Added a "make install" option (suggested by Alexey Loginov and other
    users, done by Zsolt Udvari and Liviu Lalescu).
- Added an icon (suggested by Alexey Loginov and other users).
- Added an option at compilation time so that FET automatically detects
  the system locale (suggested by Alexey Loginov and other users).

--- a/src/interface/interface_images.qrc
+++ b/src/interface/interface_images.qrc
@@ -2,5 +2,6 @@
 <qresource>
 	<file>images/locked.png</file>
 	<file>images/unlocked.png</file>
+	<file alias="images/appicon.png">../../icons/fet.png</file>
 </qresource>
 </RCC>
