Upgrade to FET 5.25.0
- Improved the split year dialog: groups and subgroups which will exist in this year after the division will retain their activities and constraints.
- Sort (temporarily) the constraints by description in the all time/space constraints dialogs. Also, removed the 'Sort by comments' button, which is probably useless.
- Fixed a bug introduced in version 5.24.0: when having individually modified activities, removing teachers, subjects, activity tags, or students sets could remove only some components of the large split activity.
- Some minor strings improvements.

--- a/src/interface/alltimeconstraintsform_template.ui
+++ b/src/interface/alltimeconstraintsform_template.ui
@@ -68,7 +68,7 @@
     </widget>
    </item>
    <item row="1" column="0">
-    <layout class="QHBoxLayout" name="horizontalLayout_2">
+    <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QPushButton" name="modifyConstraintPushButton">
        <property name="text">
@@ -100,7 +100,7 @@
     </layout>
    </item>
    <item row="2" column="0">
-    <layout class="QHBoxLayout" name="horizontalLayout">
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
       <widget class="QCheckBox" name="filterCheckBox">
        <property name="text">
@@ -109,16 +109,16 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="commentsPushButton">
+      <widget class="QCheckBox" name="sortedCheckBox">
        <property name="text">
-        <string>Comments</string>
+        <string comment="It refers to time constraints">Sorted</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="sortByCommentsPushButton">
+      <widget class="QPushButton" name="commentsPushButton">
        <property name="text">
-        <string>Sort</string>
+        <string>Comments</string>
        </property>
       </widget>
      </item>
