--- a/src/interface/allspaceconstraintsform_template.ui
+++ b/src/interface/allspaceconstraintsform_template.ui
@@ -62,7 +62,7 @@
     </widget>
    </item>
    <item row="1" column="0">
-    <layout class="QHBoxLayout" name="horizontalLayout_2">
+    <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QPushButton" name="modifyConstraintPushButton">
        <property name="text">
@@ -94,7 +94,7 @@
     </layout>
    </item>
    <item row="2" column="0">
-    <layout class="QHBoxLayout" name="horizontalLayout">
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
       <widget class="QCheckBox" name="filterCheckBox">
        <property name="text">
@@ -103,16 +103,16 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="commentsPushButton">
+      <widget class="QCheckBox" name="sortedCheckBox">
        <property name="text">
-        <string>Comments</string>
+        <string comment="It refers to space constraints">Sorted</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="sortByCommentsPushButton">
+      <widget class="QPushButton" name="commentsPushButton">
        <property name="text">
-        <string>Sort</string>
+        <string>Comments</string>
        </property>
       </widget>
      </item>
