Upgrade to FET 5.26.1
- Crash bug fix (probably never met, when using overlapping years) and improvements when removing students sets. Now you can completely remove a subgroup/group from a single button.
- Added a test to report subgroups which have the same activities, so that the user can make generation faster by removing equivalent subgroups (if the user checks that the subgroups also have the same constraints).
- Added a selectable option to show tool tips in the add/modify constraint dialogs which use tables (the tool tip is the day and the hour under the current cursor position). Suggested by Bob Hairgrove.
- Updated the German translation, by Bob Hairgrove.
- Code cleanup.

--- a/src/interface/fetmainform_template.ui
+++ b/src/interface/fetmainform_template.ui
@@ -1221,6 +1221,8 @@
      </property>
      <addaction name="randomSeedAction"/>
      <addaction name="separator"/>
+     <addaction name="showWarningForSubgroupsWithTheSameActivitiesAction"/>
+     <addaction name="separator"/>
      <addaction name="enableActivityTagMaxHoursDailyAction"/>
      <addaction name="enableStudentsMaxGapsPerDayAction"/>
      <addaction name="showWarningForNotPerfectConstraintsAction"/>
@@ -1238,6 +1240,8 @@
      <addaction name="settingsShowShortcutsOnMainWindowAction"/>
      <addaction name="separator"/>
      <addaction name="settingsUseColorsAction"/>
+     <addaction name="separator"/>
+     <addaction name="settingsShowToolTipsForConstraintsWithTablesAction"/>
      <addaction name="separator"/>
      <addaction name="settingsShowSubgroupsInComboBoxesAction"/>
      <addaction name="settingsShowSubgroupsInActivityPlanningAction"/>
@@ -2584,6 +2588,28 @@
    </property>
    <property name="text">
     <string>Soft conflicts</string>
+   </property>
+  </action>
+  <action name="settingsShowToolTipsForConstraintsWithTablesAction">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Show tool tips for constraints with tables</string>
+   </property>
+  </action>
+  <action name="showWarningForSubgroupsWithTheSameActivitiesAction">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Warn subgroups with the same activities</string>
    </property>
   </action>
  </widget>
