--- a/src/interface/constraintbreaktimesform_template.ui
+++ b/src/interface/constraintbreaktimesform_template.ui
@@ -6,15 +6,31 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>502</width>
-    <height>384</height>
+    <width>522</width>
+    <height>473</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string extracomment="This is the title of the dialog to see the list of all constraints of this type">Constraints break times</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
+   <item row="0" column="0" colspan="2">
+    <widget class="QLabel" name="textLabel1">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text">
+      <string>Note: An activity with duration greater than 1 cannot be split over a break. Also, the activities constrained by min days between activities constraints with 'consecutive if same day' = true cannot spread over a break.</string>
+     </property>
+     <property name="wordWrap">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0">
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <widget class="QLabel" name="constraintsTextLabel">
@@ -37,7 +53,7 @@
      </item>
     </layout>
    </item>
-   <item row="0" column="1">
+   <item row="1" column="1">
     <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
       <widget class="QLabel" name="currentConstraintTextLabel">
@@ -54,7 +70,7 @@
      </item>
     </layout>
    </item>
-   <item row="1" column="0" colspan="2">
+   <item row="2" column="0" colspan="2">
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QPushButton" name="addConstraintPushButton">
