--- a/src/interface/yearsform_template.ui
+++ b/src/interface/yearsform_template.ui
@@ -30,61 +30,57 @@
     </widget>
    </item>
    <item row="1" column="0">
-    <layout class="QVBoxLayout" name="verticalLayout">
+    <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <layout class="QHBoxLayout" name="horizontalLayout">
-       <item>
-        <widget class="QPushButton" name="addYearPushButton">
-         <property name="text">
-          <string>Add</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QPushButton" name="removeYearPushButton">
-         <property name="text">
-          <string>Remove</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
-     <item>
-      <layout class="QHBoxLayout" name="horizontalLayout_2">
-       <item>
-        <widget class="QPushButton" name="modifyYearPushButton">
-         <property name="text">
-          <string>Modify</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QPushButton" name="sortYearsPushButton">
-         <property name="text">
-          <string>Sort</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
-     <item>
-      <widget class="QPushButton" name="divisionsPushButton">
+      <widget class="QPushButton" name="addYearPushButton">
        <property name="text">
-        <string>Divide year by selecting categories</string>
+        <string>Add</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="activateStudentsPushButton">
+      <widget class="QPushButton" name="modifyYearPushButton">
        <property name="text">
-        <string>Activate all activities for selected year</string>
+        <string>Modify</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="deactivateStudentsPushButton">
+      <widget class="QPushButton" name="removeYearPushButton">
        <property name="text">
-        <string>Deactivate all activities for selected year</string>
+        <string>Remove</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item row="2" column="0">
+    <widget class="QPushButton" name="divisionsPushButton">
+     <property name="text">
+      <string>Divide year by selecting categories</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0">
+    <widget class="QPushButton" name="activateStudentsPushButton">
+     <property name="text">
+      <string>Activate all activities for selected year</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0">
+    <widget class="QPushButton" name="deactivateStudentsPushButton">
+     <property name="text">
+      <string>Deactivate all activities for selected year</string>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="0">
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <item>
+      <widget class="QPushButton" name="sortYearsPushButton">
+       <property name="text">
+        <string>Sort</string>
        </property>
       </widget>
      </item>
