--- a/src/interface/teachersform_template.ui
+++ b/src/interface/teachersform_template.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>520</width>
-    <height>490</height>
+    <height>502</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -55,20 +55,38 @@
     </layout>
    </item>
    <item row="2" column="0">
+    <layout class="QHBoxLayout" name="horizontalLayout_3">
+     <item>
+      <widget class="QPushButton" name="targetNumberOfHoursPushButton">
+       <property name="text">
+        <string comment="It means the target number of hours for a teacher, but keep translation short">Target hours</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="qualifiedSubjectsPushButton">
+       <property name="text">
+        <string comment="It means a list of qualified (allowed) subjects for the teacher. Keep translation short.">Qualified subjects</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item row="3" column="0">
     <widget class="QPushButton" name="activateTeacherPushButton">
      <property name="text">
       <string>Activate all activities for selected teacher</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="0">
+   <item row="4" column="0">
     <widget class="QPushButton" name="deactivateTeacherPushButton">
      <property name="text">
       <string>Deactivate all activities for selected teacher</string>
      </property>
     </widget>
    </item>
-   <item row="4" column="0">
+   <item row="5" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QPushButton" name="moveTeacherUpPushButton">
