Upgrade to FET 5.31.2

--- a/src/interface/activitytagsform_template.ui
+++ b/src/interface/activitytagsform_template.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>500</width>
-    <height>463</height>
+    <width>493</width>
+    <height>501</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -62,20 +62,38 @@
     </layout>
    </item>
    <item row="2" column="0">
+    <layout class="QHBoxLayout" name="horizontalLayout_3">
+     <item>
+      <widget class="QPushButton" name="printablePushButton">
+       <property name="text">
+        <string>Printable</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="notPrintablePushButton">
+       <property name="text">
+        <string>Not printable</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item row="3" column="0">
     <widget class="QPushButton" name="activateActivityTagPushButton">
      <property name="text">
       <string>Activate all activities for selected tag</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="0">
+   <item row="4" column="0">
     <widget class="QPushButton" name="deactivateActivityTagPushButton">
      <property name="text">
       <string>Deactivate all activities for selected tag</string>
      </property>
     </widget>
    </item>
-   <item row="4" column="0">
+   <item row="5" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QPushButton" name="moveActivityTagUpPushButton">
